--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,18 @@
-#front-jumbotron {
+#primary-jumbotron {
 	background-image: linear-gradient(
       rgba(0, 0, 0, 0.5),
       rgba(0, 0, 0, 0.5)
     ), url(../img/orhvfr-min.jpg);
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+#secondary-jumbotron {
+	background-image: linear-gradient(
+      rgba(0, 0, 0, 0.5),
+      rgba(0, 0, 0, 0.5)
+    ), url(../img/steamcity-min.jpg);
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
